mostrando mais tags e criando página sobre

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         <!-- Lista ordenada -->
         <ol type="A">
           <!-- List item = Item da lista -->
-          <li>Sobre</li>
+          <li><a href="#titulo-cuscuz">Sobre cuscuz</a></li>
           <li>Contato</li>
           <li>Portifólio</li>
         </ol>
         <!-- Lista desordenada -->
         <ul type="square">
-          <li>Sobre</li>
+          <li><a href="./sobre.html">Sobre</a></li>
           <li>Contato</li>
-          <li>Portifólio</li>
+          <li><a href="https://github.com/SerraZ3">Github</a></li>
         </ul>
       </nav>
     </header>
@@ -36,6 +36,78 @@
       <h4>Titulo 4</h4>
       <h5>Titulo 5</h5>
       <h6>Titulo 6</h6>
+      <!-- Cria um paragrafo -->
+      <p>Paragráfo</p>
+      <!-- Tag para separar texto mas sem significado semântico -->
+      <span>Separa texto</span>
+      <p>
+        Lorem ipsum dolor sit, <span>amet consectetur</span> adipisicing elit.
+        Atque iure, necessitatibus praesentium id debitis obcaecati totam beatae
+        corrupti consequuntur tempora perspiciatis in quas vel blanditiis?
+        Cupiditate voluptatibus porro quis iure.
+      </p>
+      <!-- Pula linha -->
+      <br />
+      <b>Transforma o texto em negrito</b>
+      <br />
+      <strong
+        >Transforma o texto em negrito porém com significado semântico. Diz que
+        o texto tem importância</strong
+      >
+      <br />
+      <i>Texto itálico</i>
+      <br />
+      <em>Texto itálico porém com significado semântico. Da uma ênfase</em>
+      <br />
+      <mark>Destaca o texto</mark>
+      <br />
+      <cite>Citação</cite>
+      <div>
+        <abbr title="Javascript">JS</abbr>
+      </div>
+
+      <div>Divide o conteúdo. Não possui significado semântico</div>
+      <section>Divide o conteúdo, porém possui significado semântico</section>
+      <article>Fragmento de uma seção</article>
+
+      <section>
+        <h2 id="titulo-cuscuz">Cuscuz</h2>
+        <img src="./img/cuscuz.jpg" alt="Cuscuz" width="200" height="200" />
+        <img
+          src="https://avatars.githubusercontent.com/u/30788371?v=4"
+          alt="Adorador do cuscuz"
+          width="200"
+          height="200"
+        />
+        <article>
+          <h3>Por que o cuscuz é tão bom?</h3>
+          <p>Cuscuz é bom porque é bom</p>
+        </article>
+        <article>
+          <h3>Como fazer cuscuz?</h3>
+          <p>Só seguir o tutorial no yt</p>
+        </article>
+      </section>
+      <section>
+        <h2>Baião de dois</h2>
+        <article>
+          <h3>Por que é tão bom?</h3>
+          <p>Porque é bom</p>
+        </article>
+      </section>
+
+      <!-- Site de noticia -->
+      <section>
+        <h2>Esportes</h2>
+        <article>
+          <h3>Futebol</h3>
+          <p>Futebol é top, vai Neymar!</p>
+        </article>
+        <article>
+          <h3>Basquete</h3>
+          <p>Basquete é também é top!</p>
+        </article>
+      </section>
     </main>
     <!-- Rodapé da página -->
     <footer></footer>
