--- a/index.html
+++ b/index.html
@@ -73,12 +73,14 @@
       <section>
         <h2 id="titulo-cuscuz">Cuscuz</h2>
         <img src="./img/cuscuz.jpg" alt="Cuscuz" width="200" height="200" />
-        <img
-          src="https://avatars.githubusercontent.com/u/30788371?v=4"
-          alt="Adorador do cuscuz"
-          width="200"
-          height="200"
-        />
+        <a href="https://github.com/SerraZ3">
+          <img
+            src="https://avatars.githubusercontent.com/u/30788371?v=4"
+            alt="Adorador do cuscuz"
+            width="200"
+            height="200"
+          />
+        </a>
         <article>
           <h3>Por que o cuscuz é tão bom?</h3>
           <p>Cuscuz é bom porque é bom</p>
